change the api link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <p id="sex"></p>
 
 <script>
-    fetch('https://last-try-y2dp.onrender.com/')
+    fetch('https://webservice-a6vx.onrender.com/')
     .then(response => response.json())
     .then(data => {
         document.getElementById('degree').innerText = data.education.degree;
